# hs-bindgen

./: .gitconfig  .gitignore  .gitmodules  .hlint.yaml  .lycheeignore  .stylish-haskell.yaml  HIGH_LEVEL_DESIGN.md  HIGH_LEVEL_DESIGN_old.md  ISSUE_ANALYSIS.md  PROPOSAL.md  PROPOSAL_DESIGN.md  PROPOSAL_v3.md  README.md  cabal.haskell-ci  cabal.project  cabal.project.base  cabal.project.base.ci  cabal.project.base.dev  cabal.project.ci  cabal.project.ci.base  clang-syntax  flake.nix  imports.h  lychee.toml  msg.txt
ansi-diff/: CHANGELOG.md  ansi-diff.cabal
ansi-diff/bench/: ansi-diff-bench.hs
ansi-diff/exe/: ansi-diff.hs
ansi-diff/fixtures/: primitive_types.hs.new.txt  primitive_types.th.new.txt
ansi-diff/src/: AnsiDiff.hs
ansi-diff/test/: ansi-diff-test.hs
c-expr/: CHANGELOG.md  c-expr.cabal
c-expr-dsl/: CHANGELOG.md  c-expr-dsl.cabal
c-expr-dsl/test/: Main.hs
c-expr-runtime/: CHANGELOG.md  c-expr-runtime.cabal
c-expr-runtime/test/: CallClang.hs  Main.hs
c-expr/test/: CallClang.hs  Main.hs
clang/: clang.buildinfo.in  clang.cabal  configure  configure.ac
clang-ast-dump/: CHANGELOG.md  Main.hs  README.md  clang-ast-dump.cabal
clang/bootstrap/: clang-bootstrap.hs  imports.h
clang/cbits/: clang_wrappers.c  clang_wrappers.h  clang_wrappers_ffi.h  rewrite_wrappers.h
clang/clang-tutorial/: clang-tutorial.hs
clang/test/: test-clang-bindings.hs
doxygen-parser/: CHANGELOG.md  doxygen-parser.cabal
doxygen-parser/test/: Main.hs
examples/literate-example/: README.md  cabal.project  literate-example.cabal
ffitypedemo/: ffitypedemo.cabal
ffitypedemo/cbits/: exporttest.c  exporttest.h
ffitypedemo/src/: A.hs  B.hs  C.hs  Main.hs  Runtime.hs  SomeOtherModule.hs  SomeStruct.hsc
ghc-arm-thumb-repro/: .gitignore  README.md  flake.nix  repro.cabal  reproduce.sh
ghc-arm-thumb-repro/app/: Main.hs
ghc-arm-thumb-repro/src/: Lib.hs
hs-bindgen/: CHANGELOG.md  README.md  hs-bindgen.cabal
hs-bindgen-bootstrap/: hs-bindgen-bootstrap.cabal  imports.h
hs-bindgen-bootstrap/src/: hs-bindgen-bootstrap.hs
hs-bindgen-libclang/: .gitignore  Setup.hs  configure  configure.ac  hs-bindgen-libclang.buildinfo.in  hs-bindgen-libclang.cabal
hs-bindgen-libclang/cbits/: .gitignore  Makefile  clang_wrappers.c  clang_wrappers.h  clang_wrappers_ffi.h  doxygen_wrappers.c  doxygen_wrappers.h
hs-bindgen-libclang/clang-ast-dump/: Main.hs  README.md
hs-bindgen-libclang/clang-tutorial/: Main.hs  clang-tutorial.hs
hs-bindgen-patterns/: CHANGELOG.md  hs-bindgen-patterns.cabal
hs-bindgen-runtime/: CHANGELOG.md  README.md  base.dhall  base.yaml  hs-bindgen-runtime.cabal  hs-bindgen-runtime.dhall  hs-bindgen-runtime.yaml
hs-bindgen-runtime/test/: test-runtime.hs
hs-bindgen-runtime/tests/: runtime-tests.hs
hs-bindgen/app/: Main.hs  hs-bindgen-cli.hs  hs-bindgen-dev.hs
hs-bindgen/bench/: hs-bindgen-bench.hs
hs-bindgen/bindings/: Makefile  Mapping.dhall  base.dhall  base.yaml  hs-bindgen-runtime.dhall  hs-bindgen-runtime.yaml
hs-bindgen/blocktest/: generate.sh
hs-bindgen/bootstrap/: standard_headers.h
hs-bindgen/cbits/: clang_wrappers.c  clang_wrappers.h
hs-bindgen/clang-ast-dump/: Main.hs  README.md
hs-bindgen/clang-tutorial/: Main.hs
hs-bindgen/examples/: adios.h  anonymous.h  attributes.h  bitfields.h  bool.h  comments.h  depusegraph.h  distilled_lib_1.h  enums.h  fixedarray.h  fixedwidth.h  flam.h  forward_declaration.h  macro_functions.h  macro_in_fundecl.h  macro_in_fundecl_vs_typedef.h  macro_types.h  macrodeftype.h  macros.h  manual_examples.h  names.h  nested_enums.h  nested_types.h  opaque_declaration.h  primitive_types.h  recursive_types.h  refactor.h  rtwtypes.h  selection.h  simple.h  simple_func.h  simple_structs.h  static_counter.h  struct_arg.h  struct_arg_a.h  struct_arg_b.h  test-th-01.h  test_01.h  test_02.h  test_bitfields.h  (+5 more)
hs-bindgen/fixtures/: adios.bindings.yaml  adios.bindingspec.yaml  adios.extbindings.yaml  adios.exts.txt  adios.hs  adios.pp.hs  adios.rs  adios.th.txt  adios.tree-diff.txt  anonymous.bindings.yaml  anonymous.bindingspec.yaml  anonymous.extbindings.yaml  anonymous.hs  anonymous.pp.hs  anonymous.rs  anonymous.th.txt  anonymous.tree-diff.txt  array.bindingspec.yaml  array.hs  array.pp.hs  array.rs  array.th.txt  array.tree-diff.txt  asm.bindingspec.yaml  asm.hs  asm.pp.hs  asm.th.txt  asm.tree-diff.txt  attributes.bindings.yaml  attributes.bindingspec.yaml  attributes.extbindings.yaml  attributes.exts.txt  attributes.hs  attributes.pp.hs  attributes.rs  attributes.th.txt  attributes.tree-diff.txt  binding_spec_simple.bindingspec.yaml  binding_spec_simple.hs  binding_spec_simple.pp.hs  (+550 more)
hs-bindgen/src/: HsBindgen.hs
hs-bindgen/src-internal/: HsBindgen.hs
hs-bindgen/test-pp/: Test01.lhs  Test02.lhs  test-pp.hs
hs-bindgen/test-th/: Def.hs  Misc.hs  Test01.hs  Test02.hs  TestTH.hs  test-th.hs
hs-bindgen/tests/: Diff.hs  Hidden.hs  Main.hs  Misc.hs  Orphans.hs  Rust.hs  TH.hs  TastyGolden.hs  golden.hs
hs-wlroots/: generate-bindings  generate.sh  hs-wlroots.cabal
hs-wlroots/app/: Wlroots.hs
issue-2142/: cabal.project  first-ext.yaml  th-example.cabal
issue-2142/app/: First.hs  Main.hs  Second.hs
issue-2142/cbits/: Makefile  first.c  first.h  second.c  second.h
literate-mode-demo/: literate-mode-demo.cabal
literate-mode-demo/app/: Main.hs  SomeRandomFile.lhs
literate-mode-demo/clhp/: CustomLiterateHaskellProcessor.hs
passbyvalue/: passbyvalue.cabal
passbyvalue/cbits/: demo.c  demo.h
passbyvalue/src/: Main.hs  Point.hsc
pcap/: pcap.cabal
pcap/src/: Pcap.hs
typing-c/: typing-c.cabal
typing-c/test/: Main.hs
union-experiment/: LICENSE  union-experiment.cabal
union-experiment-2/: README.md  union-experiment2.cabal
union-experiment-2/app/: Handwritten.hs  Main.hs  Prelims.hs  Shape.hs  UnionInfrastructure.hs
union-experiment-2/cbits/: shape.c  shape.h
union-experiment/app/: Main.hs
union-experiment/cbits/: example.c  example.h
userland-capi/: LICENSE  README.md  userland-capi.cabal
userland-capi/examples/: example01.hs  (+1 more)
zero-copy/: cabal.project  generate.sh  zero-copy.cabal
(+5376 files in other folders)
