cabal-version:      3.0
name:               clang-ast-dump
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well-Typed LLP
maintainer:         Well-Typed LLP
category:           Development
build-type:         Simple
synopsis:           Utility to aid in development of hs-bindgen
extra-doc-files:    CHANGELOG.md
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

executable clang-ast-dump
  main-is: Main.hs

  build-depends:
      -- Internal dependencies
    , hs-bindgen
    , hs-bindgen-libclang
    , hs-bindgen-runtime
  build-depends:
      -- Inherited dependencies
    , text
  build-depends:
      -- External dependencies
      base >= 4.16 && < 4.21
    , optparse-applicative >= 0.18 && < 0.19

  default-language:
      GHC2021

  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages
      -Wno-unticked-promoted-constructors
