cabal-version:      3.0
name:               clang
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Configure
synopsis:           libclang bindings
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.2
                  , GHC==9.12.2
extra-source-files: bootstrap/imports.h
                    cbits/*.c
                    cbits/*.h
                    clang.buildinfo.in
                    configure

flag dev
  description: Build debugging utilities for developing clang itself
  default: False
  manual: True

common lang
  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages
  build-depends:
      base >= 4.16 && < 4.22
  default-language:
      GHC2021
  default-extensions:
      -- We don't provide a shared list of default extension between the library
      -- and the clang-tutorial example; this way we can ensure that mere
      -- /usage/ of the library does not result in requirements for enabled
      -- language extensions.

library
  import:         lang
  hs-source-dirs: src

  default-extensions:
      CApiFFI
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      LambdaCase
      MagicHash
      TypeFamilies
      UnboxedTuples
      UndecidableInstances
      UnliftedFFITypes
      UnliftedNewtypes
  other-extensions:
      AllowAmbiguousTypes
  exposed-modules:
      Clang.Args
      Clang.Backtrace
      Clang.Enum.Bitfield
      Clang.Enum.Simple
      Clang.Paths
      Clang.Version

      Clang.LowLevel.Core
      Clang.LowLevel.Doxygen
      Clang.Internal.ByValue

      Clang.HighLevel
      Clang.HighLevel.Types
      Clang.HighLevel.Documentation
  other-modules:
      Clang.LowLevel.FFI
      Clang.LowLevel.Core.Enums
      Clang.LowLevel.Core.Instances
      Clang.LowLevel.Core.Pointers
      Clang.LowLevel.Core.Structs
      Clang.LowLevel.Doxygen.Enums
      Clang.LowLevel.Doxygen.Instances
      Clang.LowLevel.Doxygen.Structs
      Clang.Internal.CXString
      Clang.Internal.FFI
      Clang.Internal.Results
      Clang.HighLevel.Declaration
      Clang.HighLevel.Diagnostics
      Clang.HighLevel.Fold
      Clang.HighLevel.SourceLoc
      Clang.HighLevel.Tokens
      Clang.HighLevel.UserProvided
      Clang.HighLevel.Wrappers
  build-depends:
      -- External dependencies
    , data-default  >= 0.8   && < 0.9
    , exceptions    >= 0.10  && < 0.11
    , mtl           >= 2.2   && < 2.4
    , text          >= 1.2   && < 2.2
    , unliftio-core >= 0.2.1 && < 0.3

  if impl(ghc < 9.4)
    build-depends: data-array-byte >=0.1.0.1 && <0.2

  -- C bindings
  include-dirs: cbits
  cc-options:   -Wall

  c-sources:
      cbits/clang_wrappers.c

  build-tool-depends:
      hsc2hs:hsc2hs

executable clang-bootstrap
  import:         lang
  main-is:        clang-bootstrap.hs
  hs-source-dirs: bootstrap
  if flag(dev)
    buildable: True
  else
    buildable: False

  build-depends:
    , bytestring >= 0.11.4.0 && < 0.13
    , parsec     >= 3.1      && < 3.2

test-suite clang-tutorial
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        clang-tutorial.hs
  hs-source-dirs: clang-tutorial

  build-depends:
      -- Internal dependencies
    , clang
  build-depends:
      -- Inherited dependencies
    , data-default
    , text

test-suite test-clang-bindings
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        test-clang-bindings.hs
  hs-source-dirs: test

  default-extensions:
      DeriveAnyClass
      DerivingStrategies
      LambdaCase

  other-modules:
      Test.Meta.IsConcrete
      Test.Test.Exceptions
      Test.Util.AST
      Test.Util.Clang
      Test.Util.FoldException
      Test.Util.Input
      Test.Util.Input.Examples
      Test.Util.Input.StructForest
      Test.Util.Shape
      Test.Version

  build-depends:
      -- Internal dependencies
    , clang
  build-depends:
      -- Inherited dependencies
    , data-default
    , mtl
    , text
  build-depends:
      -- New dependencies
    , containers       >= 0.6  && < 0.8
    , QuickCheck       >= 2.15 && < 2.17
    , tasty            >= 1.5  && < 1.6
    , tasty-hunit      >= 0.10 && < 0.11
    , tasty-quickcheck >= 0.11 && < 0.12
