cabal-version:   3.0
name:            doxygen-parser
version:         0.1.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Well-Typed LLP
maintainer:      info@well-typed.com
category:        Development
build-type:      Simple
synopsis:        Parse Doxygen XML output into a typed Haskell AST
description:
  A standalone library for invoking the @doxygen@ binary on C\/C++ headers
  and parsing its XML output into a typed Haskell AST. The @doxygen@
  executable must be installed separately.

extra-doc-files: CHANGELOG.md
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.2
   || ==9.14.1

common lang
  ghc-options:
    -Wall -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunused-packages -Wmissing-export-lists

  build-depends:      base >=4.16 && <4.23
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Doxygen.Parser
    Doxygen.Parser.Internal
    Doxygen.Parser.Types
    Doxygen.Parser.Warning

  build-depends:
    , containers   >=0.6.5.1 && <0.9
    , directory    >=1.3.6.2 && <1.4
    , filepath     >=1.4     && <1.6
    , process      >=1.6     && <1.7
    , temporary    >=1.3     && <1.4
    , text         >=1.2     && <2.2
    , xml-conduit  >=1.9     && <1.11

test-suite test-doxygen-parser
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded

  -- Internal dependencies
  build-depends:  doxygen-parser

  -- External dependencies
  build-depends:
    , containers        >=0.6.5.1 && <0.9
    , QuickCheck        >=2.14.3  && <2.16
    , tasty             >=1.5     && <1.6
    , tasty-hunit       >=0.10.2  && <0.11
    , tasty-quickcheck  >=0.10.2  && <0.12
    , text              >=1.2     && <2.2
    , xml-conduit       >=1.9     && <1.11
