cabal-version: 3.0
name:          ffitypedemo
version:       0.1.0
license:       BSD-3-Clause
author:        Edsko de Vries
maintainer:    edsko@well-typed.com
build-type:    Simple

common lang
  default-language:   GHC2021
  build-depends:      base >= 4.16 && < 5
  ghc-options:        -Wall

  default-extensions:
      CApiFFI
      DefaultSignatures
      DerivingStrategies
      TypeFamilies

executable ffitypedemo
  import:         lang
  hs-source-dirs: src
  main-is:        Main.hs

  other-modules:
      A
      B
      C
      SomeOtherModule
      SomeStruct
      Runtime

  include-dirs: cbits
  c-sources:    cbits/exporttest.c
  cc-options:   -Wall