cabal-version:      3.0
name:               hs-bindgen-bootstrap
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Simple
synopsis:           Generate Haskell bindings from C headers
extra-doc-files:    CHANGELOG.md
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

common lang
  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages
      -Wno-unticked-promoted-constructors
  build-depends:
      base >= 4.16 && < 4.21
  default-language:
      GHC2021
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      DisambiguateRecordFields
      LambdaCase
      MultiWayIf
      OverloadedStrings
      PatternSynonyms
      QuantifiedConstraints
      RecordWildCards
      TypeApplications
      TypeFamilies
      UndecidableInstances
      ViewPatterns
  if impl(ghc >= 9.8)
    default-extensions:
      TypeAbstractions

executable hs-bindgen-bootstrap
  import:         lang
  hs-source-dirs: src
  main-is:        hs-bindgen-bootstrap.hs
  build-depends:  base <5, bytestring, parsec
